[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/Equipment/c4.png" type="Texture" id=1]
[ext_resource path="res://src/Game/assets/audio/c4.mp3" type="AudioStream" id=2]
[ext_resource path="res://src/Game/assets/audio/explosion.mp3" type="AudioStream" id=3]
[ext_resource path="res://src/Objects/Safe/Safe.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/Poppins-Medium.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://src/Objects/Safe/safe_body.png" type="Texture" id=6]
[ext_resource path="res://src/Objects/Safe/safe_door.png" type="Texture" id=7]
[ext_resource path="res://src/Objects/Drills/Regular/Regular_drill_left.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 64 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 80, 80 )

[sub_resource type="DynamicFont" id=10]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
resource_name = "Open_right"
tracks/0/type = "value"
tracks/0/path = NodePath("Door:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.4, 0.1 ),
"update": 0,
"values": [ 90.0, 180.0 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Door:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Safe_right" type="StaticBody2D"]
position = Vector2( 16, 24 )
z_index = 5
collision_layer = 4096
collision_mask = 0
script = ExtResource( 4 )

[node name="Body" type="Sprite" parent="."]
position = Vector2( -31, -32 )
rotation = 1.5708
texture = ExtResource( 6 )

[node name="Door" type="Sprite" parent="."]
position = Vector2( 17, 32 )
texture = ExtResource( 7 )
offset = Vector2( -64, -15 )

[node name="C4" type="Sprite" parent="."]
position = Vector2( -16, -160 )
texture = ExtResource( 1 )
offset = Vector2( 0.179699, 128.193 )

[node name="Safe_collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -31, -33 )
shape = SubResource( 1 )

[node name="C4_noise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
max_distance = 1000.0

[node name="Explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
max_distance = 1000.0

[node name="C4_timer" type="Timer" parent="."]
one_shot = true

[node name="Interaction_hitbox" type="Area2D" parent="." groups=["interactable"]]
visible = false
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction_hitbox"]
position = Vector2( -16, -32 )
shape = SubResource( 9 )

[node name="Interaction_timer" type="Timer" parent="."]
one_shot = true

[node name="Interaction_panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -112.0
margin_top = -288.0
margin_right = 112.0
margin_bottom = -122.0

[node name="VBoxContainer" type="VBoxContainer" parent="Interaction_panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 217.0
margin_bottom = 161.0

[node name="Title" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_right = 210.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 10 )
text = "Safe"
align = 1

[node name="Action1" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_top = 50.0
margin_right = 210.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 3 )
text = "Hold [F] to plant Drill"
align = 1
autowrap = true

[node name="Action2" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_top = 77.0
margin_right = 210.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 3 )
text = "Hold [X] to Lockpick"
align = 1
autowrap = true

[node name="Action3" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_top = 104.0
margin_right = 210.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 3 )
text = "Hold [C] to use C4"
align = 1
autowrap = true

[node name="Interaction_progress" type="ProgressBar" parent="Interaction_panel/VBoxContainer"]
margin_top = 131.0
margin_right = 210.0
margin_bottom = 154.0
custom_fonts/font = SubResource( 4 )
step = 1.0
rounded = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Open_right = SubResource( 2 )
anims/RESET = SubResource( 6 )

[node name="Drill" parent="." instance=ExtResource( 8 )]
position = Vector2( 104, -32 )

[connection signal="timeout" from="C4_timer" to="." method="_on_C4_timer_timeout"]
[connection signal="timeout" from="Interaction_timer" to="." method="_on_Interaction_timer_timeout"]
[connection signal="drill_finished" from="Drill" to="." method="_on_drill_finished"]
